--- a/Kopigrad/Kopigrad.csproj
+++ b/Kopigrad/Kopigrad.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Image\Baners\backgroundRequst.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Codecamp.MudBlazor" Version="6.0.14.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,6 +24,10 @@
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\userfiles\" />
   </ItemGroup>
 
 </Project>
