--- a/Kopigrad/appsettings.json
+++ b/Kopigrad/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.AspNetCore": "Error"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Smtp": {
+    "Host": "smtp.mail.ru",
+    "Port": "587",
+    "Username": "copygrad_cheak_email@mail.ru",
+    "Password": "1eeXxXMs1j3fmNetYKCL",
+    "From": "copygrad_cheak_email@mail.ru",
+    "EnableSsl": "true"
+  }
 }
