--- a/Kopigrad/Kopigrad.csproj
+++ b/Kopigrad/Kopigrad.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\images\template2.png" />
     <Content Remove="wwwroot\Image\Baners\backgroundRequst.png" />
   </ItemGroup>
 
@@ -40,6 +41,12 @@
   <ItemGroup>
     <Folder Include="wwwroot\userfiles\" />
     <Folder Include="wwwroot\visit\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="wwwroot\images\template2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
